syntax = "proto3";

package eg.actl;

message Registration {
  string id = 1 [ json_name = "id" ];
  repeated string labels = 2 [ json_name = "labels" ];
  bytes publickey = 3 [ json_name = "pkey" ];
  string authzed_at = 4 [ json_name = " authzed_at" ];
  string expires_at = 5 [ json_name = " expires_at" ];
}

message RegistrationSearchRequest {}

message RegistrationSearchResponse {
  repeated Registration items = 1 [ json_name = "items" ];
}

message RegistrationRequest {
  Registration registration = 1 [ json_name = "registration" ];
}

message RegistrationResponse {
  Registration registration = 1 [ json_name = "registration" ];
}

message RegistrationGrantRequest {
  Registration registration = 1 [ json_name = "registration" ];
}

message RegistrationGrantResponse {
  Registration registration = 1 [ json_name = "registration" ];
}